--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <iframe src="https://web.powerva.microsoft.com/environments/a3c669f6-ac2e-4e77-ad43-beab3e15bee7/bots/crbf0_customerSupport/webchat?__version__=2" frameborder="0" style="width: 100%; height: 100%;">
+  </iframe>
 </body>
 </html>
